# forgejo-keycloak-rust-mcp

./: .bestpractices.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_SIGNING_KEYS  REUSE.toml  SECURITY.md  deny.toml  renovate.json
.forgejo/ISSUE_TEMPLATE/: 01_bug_report.yaml  02_feature_request.yaml  03_question.yaml  bug_report.md  config.yml  feature_request.md  question.md
.forgejo/workflows/: ci.yml  dependency-updates.yml  release-sbom.yml
LICENSES/: Apache-2.0.txt  MIT.txt
crates/audit/: Cargo.toml  README.md
crates/audit/src/: lib.rs
crates/forgejo-mcpd/: Cargo.toml  README.md
crates/forgejo-mcpd/src/: approval.rs  forgejo.rs  main.rs  principal.rs  rate_limit.rs
crates/identity/: Cargo.toml  README.md
crates/identity/src/: lib.rs
crates/policy/: Cargo.toml  README.md
crates/policy/src/: lib.rs
deploy/lab/: README.md
docs/: agent-setup.md  codeberg-publishing.md  configuration.md  crates-io-publishing.md  credential-rotation-and-incident-response.md  features.md  forgejo-16-release-plan.md  install.md  jwks-cache-and-key-rotation.md  mcp-functions.md  release-verification.md  security-checks.md  testing.md  threat-model.md
docs/archive/: README.md  roadmap-phases-0-3.md
docs/operations/: live-readback-2026-06-25.md  status-2026-06-25.md
docs/original-inputs/: recommended-direction.md
docs/promotion/: README.md  codeberg-release-v0.10.0.md  codeberg-release-v0.11.0.md  codeberg-release-v0.4.2.md  codeberg-release-v0.5.0.md  codeberg-release-v0.6.0.md  codeberg-release-v0.7.0.md  codeberg-release-v0.8.0.md  codeberg-release-v0.9.0.md  codeberg-release-v1.0.0.md  codeberg-release-v1.0.1.md  codeberg-release-v1.0.2.md  codeberg-release-v1.1.0.md  codeberg-release-v1.1.2.md  codeberg-release-v1.1.4.md  codeberg-release-v1.2.0.md  codeberg-release-v1.2.1.md  codeberg-release-v1.2.10.md  codeberg-release-v1.2.11.md  codeberg-release-v1.2.2.md  codeberg-release-v1.2.3.md  codeberg-release-v1.2.4.md  codeberg-release-v1.2.6.md  codeberg-release-v1.2.7.md  codeberg-release-v1.2.8.md  codeberg-release-v1.2.9.md  codeberg-release-v1.3.0.md  codeberg-release-v1.3.1.md  codeberg-release-v2.0.0.md  codeberg-release-v2.1.0.md  codeberg-roadmap-issues.md  openssf-best-practices-checklist.md
docs/promotion/github-placeholder/: README.md
docs/release-notes/: 0.10.0.md  0.11.0.md  0.3.15.md  0.4.0.md  0.4.1.md  0.4.2.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md  1.0.0.md  1.0.1.md  1.0.2.md  1.1.0.md  1.1.2.md  1.1.3.md  1.1.4.md  1.2.0.md  1.2.1.md  1.2.10.md  1.2.11.md  1.2.2.md  1.2.3.md  1.2.4.md  1.2.6.md  1.2.7.md  1.2.8.md  1.2.9.md  1.3.0.md  1.3.1.md  2.0.0.md  2.1.0.md
docs/wiki/: Agent-Setup.md  Codeberg-Roadmap-Issues-Pre-1-0.md  Configuration.md  Contributing.md  Crates-IO-Install.md  Credential-Rotation-And-Incident-Response.md  Documentation-Archive.md  Features.md  Forgejo-16-Release-Plan.md  Further-Planned-Improvements.md  Generated-API-Coverage.md  Home.md  Install.md  JWKS-Cache-Limits-And-Key-Rotation.md  MCP-Functions.md  Release-Artifact-Verification.md  Roadmap-Phases-0-3.md  Roadmap.md  Security-Model.md  Testing-And-Coverage.md  Threat-Model.md  _Sidebar.md
openspec/changes/forgejo-keycloak-rust-mcp/: proposal.md
openspec/changes/forgejo-keycloak-rust-mcp/specs/identity-policy/: spec.md
opir/projects/: forgejo-keycloak-rust-mcp.yaml  setup_forgejo_keycloak_rust_mcp_project.ps1
tools/: build-release-artifacts.ps1  generate_forgejo_api_catalog.py  publish-crates-io.ps1
