# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
members = [
    "crates/audit",
    "crates/forgejo-mcpd",
    "crates/identity",
    "crates/policy",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/rawholding/forgejo-keycloak-rust-mcp"
homepage = "https://codeberg.org/rawholding/forgejo-keycloak-rust-mcp"
documentation = "https://codeberg.org/rawholding/forgejo-keycloak-rust-mcp/wiki"
rust-version = "1.95"
keywords = ["forgejo", "keycloak", "mcp", "oauth", "agents"]
categories = ["command-line-utilities", "web-programming::http-server", "authentication"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
