# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "audit"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
policy = { path = "../policy" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
