# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "forgejo-keycloak-mcp-audit"
version = "1.1.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Token-safe audit event schema for forgejo-keycloak-rust-mcp."
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "audit"

[dependencies]
policy = { package = "forgejo-keycloak-mcp-policy", path = "../policy", version = "1.1.2" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
