# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "forgejo-mcpd"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
audit = { path = "../audit" }
axum.workspace = true
clap.workspace = true
identity = { path = "../identity" }
policy = { path = "../policy" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
