# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "identity"
version = "0.4.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
