# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "forgejo-keycloak-mcp-identity"
version = "2.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Keycloak OIDC discovery, JWKS, and bearer-token validation for forgejo-keycloak-rust-mcp."
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "identity"

[dependencies]
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
