# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "forgejo-keycloak-mcp-policy"
version = "1.2.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Policy registry and generated Forgejo API classification data for forgejo-keycloak-rust-mcp."
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "policy"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
